# NeonNote

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
NeonNote V.1.1/Doc/: LICENSE.txt  requirements.txt
NeonNote V.1.1/Src/: NeonNote_V1.1.py  license_status.json
NeonNote V1.0/Src/: NeonNote_V1.0.py
Src/neonnote/: config.py  file_ops.py  info_window.py  main.py  more_functions.py
docs/: index.html  style.css
